use better way to stop annoying horizontal scrollbar

--- a/src/main/webapp/html/fixed_table_header/fixed_table_header2.css
+++ b/src/main/webapp/html/fixed_table_header/fixed_table_header2.css
@@ -6,7 +6,10 @@ div.title{
 }
 
 body{	
-	overflow-x: hidden;
+	/*overflow-x: hidden;*/
+	/* this is bad way to stop Annoying horizontal scrollbar because horizontal scrollbar is required when the page really stretch out */   
+	
+	margin: 0;   /* use this to stop Annoying horizontal scrollbar */
 }
 
 div.tableHeader{	
